# testrepo

./: Brewfile  mash.py  pack  update.py
package-list/: Brewfile  aptfile  pyproject.toml
shell/: .bash_profile
test_files/: a  brewtext.ipynb  mashfile  packages.py  pyproject.toml
test_files/package-list/: Brewfile  aptfile
